kubernetes/manifests/istio-ambient/peer-authentication-monitoring.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: monitoring
spec:
  mtls:
    mode: PERMISSIVE
