kubernetes/manifests/istio-ambient/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: trip-app
spec:
  mtls:
    mode: STRICT
