kubernetes/manifests/istio-ambient/istio-hbone-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: istio-ambient-hbone
  namespace: trip-app
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
    ports:
    - port: 15008
      protocol: TCP
  - from:
    - podSelector: {}
    ports:
    - port: 15008
      protocol: TCP
  egress:
  - to:
    - podSelector: {}
    ports:
    - port: 15008
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
    ports:
    - port: 15008
      protocol: TCP
